[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/HUD/controls/flatLight/flatLight24.png" type="Texture" id=1]
[ext_resource path="res://assets/HUD/controls/shadedLight/shadedLight27.png" type="Texture" id=2]
[ext_resource path="res://assets/HUD/controls/shadedLight/shadedLight25.png" type="Texture" id=3]
[ext_resource path="res://assets/HUD/controls/flatLight/flatLight22.png" type="Texture" id=4]
[ext_resource path="res://assets/HUD/controls/shadedLight/shadedLight24.png" type="Texture" id=5]
[ext_resource path="res://assets/HUD/controls/shadedLight/shadedLight26.png" type="Texture" id=6]
[ext_resource path="res://assets/HUD/controls/flatLight/flatLight23.png" type="Texture" id=7]
[ext_resource path="res://assets/HUD/controls/flatLight/flatLight25.png" type="Texture" id=8]
[ext_resource path="res://ui/Controls.gd" type="Script" id=9]

[node name="Controls" type="CanvasLayer"]
script = ExtResource( 9 )

[node name="LR" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 37.0
margin_top = -98.0
margin_right = 287.0
margin_bottom = -18.0
rect_scale = Vector2( 0.8, 0.8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftButton" type="TextureButton" parent="LR"]
margin_right = 80.0
margin_bottom = 80.0
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightButton" type="TextureButton" parent="LR"]
margin_left = 170.0
margin_right = 250.0
margin_bottom = 80.0
size_flags_horizontal = 10
size_flags_vertical = 4
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TB" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -235.0
margin_top = -95.0
margin_right = 15.0
margin_bottom = -15.0
rect_scale = Vector2( 0.8, 0.8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopButton" type="TextureButton" parent="TB"]
margin_left = 170.0
margin_right = 250.0
margin_bottom = 80.0
size_flags_horizontal = 10
size_flags_vertical = 4
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomButton" type="TextureButton" parent="TB"]
visible = false
margin_left = 170.0
margin_right = 250.0
margin_bottom = 80.0
size_flags_horizontal = 10
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="LR/LeftButton" to="." method="_on_LeftButton_button_down"]
[connection signal="button_up" from="LR/LeftButton" to="." method="_on_LeftButton_button_up"]
[connection signal="button_down" from="LR/RightButton" to="." method="_on_RightButton_button_down"]
[connection signal="button_up" from="LR/RightButton" to="." method="_on_RightButton_button_up"]
[connection signal="button_down" from="TB/TopButton" to="." method="_on_TopButton_button_down"]
[connection signal="pressed" from="TB/BottomButton" to="." method="_on_BottomButton_pressed"]
